fixed missing background color on narrow width, tall height

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -14,6 +14,7 @@
   --vvlight-color: #f4e0cb;
   --dark-color: #65412c;
   --bright-color: #f49c69;
+  --bg-color: #ffc8ac;
 
   --debug-color: #715ec7;
   --debug-color-secondary: #dbbce2;
